--- a/Styles/style.css
+++ b/Styles/style.css
@@ -19719,6 +19719,19 @@ li {
 }
 
 .job .job-container .jobCard .imageCard .image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   width: 70%;
   height: 15rem;
   margin: 1rem 0rem;
